# LegacyStream

./: CMakeLists.txt  DEPLOYMENT.md  ICON_SETUP.md  PROJECT_SUMMARY.md  README.md  copy_dlls.bat  test_config.ini  test_enhanced_mounts.ini
assets/icons/: resources.qrc
docs/: ARCHITECTURE.md  BUILDING.md  PERFORMANCE_MANAGER.md  ROADMAP.md  STATISTIC_RELAY.md  WEB_INTERFACE.md  api-reference.html  configuration.html  deployment.html  developer-guide.html  enhanced_mount_example.html  getting-started.html  index.html  performance.html  statistics.html  troubleshooting-guide.html  ui-features.html  user-manual.html  video-tutorials.html  web-interface.html  web_interface_example.html
docs/assets/css/: style.css
docs/assets/js/: main.js
include/codecs/: CodecManager.h
include/core/: AdvancedCacheManager.h  Configuration.h  ConnectionPoolManager.h  LoadBalancerManager.h  Logger.h  PerformanceManager.h  ResourceMonitorManager.h  ServerManager.h
include/deployment/: AutoUpdateManager.h  CloudDeploymentManager.h  DockerManager.h  InstallerManager.h
include/devtools/: CodeQualityManager.h  DebuggingManager.h  DevelopmentScriptsManager.h  ProfilingManager.h
include/gui/: AccessibilityManager.h  MainWindow.h  SSLWidget.h  ThemeManager.h
include/protocols/: ProtocolManager.h
include/ssl/: CertificateManager.h  SSLManager.h  SecurityManager.h
include/streaming/: AudioProcessor.h  DynamicLoadBalancer.h  HLSGenerator.h  HttpServer.h  LiveAudioMonitor.h  LivePerformanceMetrics.h  MetadataManager.h  RealTimeStatisticsManager.h  RealTimeWebSocketManager.h  RelayManager.h  StatisticRelayManager.h  StreamBuffer.h  StreamManager.h  WebInterface.h
include/testing/: AutomatedTestingManager.h  ComprehensiveTestSuite.h  IntegrationTestingManager.h  PerformanceTestingManager.h
src/: main.cpp
src/codecs/: CMakeLists.txt  CodecManager.cpp
src/core/: CMakeLists.txt  Configuration.cpp  Logger.cpp  PerformanceManager.cpp  ServerManager.cpp
src/gui/: CMakeLists.txt  MainWindow.cpp  SSLWidget.cpp
src/protocols/: CMakeLists.txt  ProtocolManager.cpp
src/ssl/: CMakeLists.txt  CertificateManager.cpp  SSLManager.cpp  SecurityManager.cpp
src/streaming/: AudioProcessor.cpp  CMakeLists.txt  HLSGenerator.cpp  HttpServer.cpp  MetadataManager.cpp  RealTimeStatisticsManager.cpp  RelayManager.cpp  StatisticRelayManager.cpp  StreamBuffer.cpp  StreamManager.cpp  WebInterface.cpp
